log/build_2025-09-10_17-45-44/turtlebot_controller/stderr.log
  File "/home/ubuntuuser/ros2_ws/install/turtlebot_controller/lib/python3.12/site-packages/turtlebot_controller/controller.py", line 102
    while t <= 10.0
                   ^
SyntaxError: expected ':'

